--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1"
   }
