--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,10 @@
   },
   "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1"
