--- a/C2C-frontend/package.json
+++ b/C2C-frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
