--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "firebase-admin": "^12.7.0",
     "multer": "^2.0.2"
   }
 }
